Add query paging and log with aspect instruction
fix update and delete sql sentences
fix swagger ui load
add service layer tests

ToDo: exceptions and response messages
ToDo: unit tests and caching system
