# src/main/resources/openapi.yaml
@@ -13,7 +13,7 @@ info:
     * Eliminar una nave.
   version: 0.1.0-SNAPSHOT
 servers:
-  - url: https://localhost:8080/api/v1
+  - url: https://localhost/api/v1
 tags:
   - name: spacecraft
     description: Operations about spacecraft
@@ -24,6 +24,31 @@ paths:
         - spacecraft
       summary: Search all ships
       operationId: findAllShips
+      parameters:
+        - name: pageNumber
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: pageSize
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+        - name: sort
+          in: query
+          required: false
+          description: ''
+          schema:
+            type: array
+            items:
+              type: string
+              uniqueItems: true
+              example: 'id:a'
+              pattern: '^\w+[:a|:d]?$'
       responses:
         '200':
           description: successful operation
@@ -87,6 +112,7 @@ paths:
           required: true
           schema:
             type: integer
+            minimum: 1
       requestBody:
         description: Update an existent ship in the store
         content:
@@ -128,8 +154,33 @@ paths:
           required: true
           schema:
             type: string
-            pattern: '^[\w\s\W]{3,64}$'
             nullable: false
+            minLength: 3
+            maxLength: 64
+        - name: pageNumber
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+        - name: pageSize
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+        - name: sort
+          in: query
+          required: false
+          description: ''
+          schema:
+            type: array
+            items:
+              type: string
+              uniqueItems: true
+              example: 'id:a'
+              pattern: '^\w+[:a|:d]?$'
       responses:
         '200':
           description: successful operation
@@ -154,6 +205,8 @@ components:
         name:
           type: string
           example: 'Apolo'
+          minLength: 3
+          maxLength: 64
         active:
           type: boolean
           example: true
@@ -162,6 +215,7 @@ components:
       properties:
         name:
           type: string
-          pattern: '^[\w\s\W]{3,64}$'
           nullable: false
           example: 'Apolo'
+          minLength: 3
+          maxLength: 64
